<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="horizontal"
    tools:context="com.bdl.itri.itri_ecg_ppg_monitor.ControlActivity">

    <LinearLayout
        android:layout_width="230sp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textDeviceName"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textDeviceAddress"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textState"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout android:id="@+id/Waveform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.bdl.itri.itri_ecg_ppg_monitor.WaveformView
            android:id="@+id/WaveformArea"
            android:layout_width="350dp"
            android:layout_height="172dp"
            android:layout_marginStart="30dp" />
        <TextView android:id="@+id/txt_ECGpos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/posECG"
            android:layout_alignTop="@+id/WaveformArea"
            android:layout_marginStart="1dp"
            android:textColor="@color/ECG_color"/>
        <TextView android:id="@+id/txt_PPGpos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/posPPG"
            android:textColor="@color/PPG_color"
            android:layout_below="@+id/txt_ECGpos"
            android:layout_alignStart="@+id/txt_ECGpos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WaveformArea"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textECGvalue"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:text="@string/textECGvalue"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ECGvalueHex"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ECGvalueDec"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textPPGvalue"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:text="@string/textPPGvalue"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/PPGvalueHex"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/PPGvalueDec"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnStartRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:onClick="startRecording"
                    android:text="@string/startRecording"
                    tools:ignore="ButtonStyle,HardcodedText" />

                <Button
                    android:id="@+id/btnStopRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:onClick="stopRecording"
                    android:text="@string/stopRecording"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>